# RCPSP_SCIPvsGA

./: CMakeLists.txt  main_scip.cpp  rcpsp_parser.cpp  rcpsp_parser.h
